# erpgame

./: Cargo.toml  README.md  build
src/: main.rs  templates.rs
src/api/: dto.rs  mod.rs  routes.rs
src/game/: achievements.rs  ad_campaigns.rs  board.rs  campaigns.rs  competitors.rs  csr.rs  ecommerce.rs  economy.rs  employees.rs  events.rs  executive_ai.rs  franchise.rs  loyalty.rs  mod.rs  private_label.rs  products.rs  research.rs  seasonal.rs  simulation.rs  sponsorships.rs  state.rs  supply_chain.rs  upgrades.rs
templates/: achievements.html  ad_campaigns.html  base.html  board.html  campaigns.html  competitors.html  csr.html  dashboard.html  decisions.html  delegation.html  ecommerce.html  employees.html  events.html  executives.html  finances.html  franchise.html  loyalty.html  policies.html  private_label.html  products.html  research.html  seasonal.html  stores.html  supply_chain.html  upgrades.html
